--- a/platformio.ini
+++ b/platformio.ini
@@ -17,8 +17,18 @@ build_flags =
   ; Don't use lv_conf.h. Tweak params via platfom.ini.
   -D LV_CONF_SKIP
   -D LV_CONF_INCLUDE_SIMPLE
+  ; add by gary below
+  -D LV_USE_SYSMON=1
+  -D LV_USE_PERF_MONITOR=1
+  -D LV_USE_MEM_MONITOR=1
+  -D LV_USE_LOG=1
   ; Enable LVGL demo, remove when working on your own project
   -D LV_USE_DEMO_WIDGETS=1
+  ; -D LV_USE_DEMO_BENCHMARK=1
+  ; -D LV_FONT_MONTSERRAT_24=1
+  -D LV_BUILD_EXAMPLES=1
+  ; -D LV_USE_LABEL=1
+  -D LV_USE_TINY_TTF=1
   ; Add more defines below to overide lvgl:/src/lv_conf_simple.h
 lib_deps =
   ; Use direct URL, because package registry is unstable
@@ -43,7 +53,7 @@ build_flags =
   -D LV_DRV_NO_CONF
   -D LV_USE_SDL
   -D SDL_HOR_RES=480
-  -D SDL_VER_RES=320  
+  -D SDL_VER_RES=480  
   -D SDL_ZOOM=1
   -D LV_SDL_INCLUDE_PATH="\"SDL2/SDL.h\""
 
@@ -58,6 +68,7 @@ build_src_filter =
   +<../hal/sdl2>
   ; Force compile LVGL demo, remove when working on your own project
   +<../.pio/libdeps/emulator_64bits/lvgl/demos>
+  +<../.pio/libdeps/emulator_64bits/lvgl/examples>
 
 
 [env:emulator_32bits]
